# obsidian-terminal

./: .commitlintrc.js  .commitlintrc.mjs  .editorconfig  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.mjs  .markdownlint-cli2.mjs  .markdownlint.json  .markdownlint.jsonc  .npmrc  .prettierignore  .prettierrc.mjs  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  PR_PREPARATION.md  README.md  ReadMe.md  SECURITY.md  bunfig.toml  eslint.config.mjs  manifest-beta.json  manifest.json  opencode.json  opencode.jsonc  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  pyproject.toml  requirements.txt  styles.css  tsconfig.json  versions.json  (+1 more)
.agents/instructions/: agents.instructions.md  commit-message.instructions.md  github-references.instructions.md  localization.instructions.md  typescript.instructions.md  workspace.instructions.md
.agents/prompts/: bump-version.prompt.md  commit-staged.prompt.md
.changeset/: .markdownlint.json  .markdownlint.jsonc  add-key-mappings.md  add-python-packaging-minor.md  add-ukrainian-localization.md  afraid-impalas-whisper.md  angry-snails-smile.md  better-owls-strive.md  breezy-falcons-sing.md  breezy-jeans-kneel.md  bright-doors-exercise.md  busy-schools-slide.md  calm-buckets-design.md  cd550bc6-4302-4f1d-be42-d16e723f7ebf.md  chilled-lamps-rescue.md  clean-profile-list.md  clean-tab-title-feature.md  common-dryers-vanish.md  complete-option-key-handling.md  config.json  consistent-env-spawn.md  cool-peas-juggle.md  crisp-cases-notice.md  crisp-loops-turn.md  cruel-corners-worry.md  curly-jobs-march.md  cute-ends-join.md  cyan-plums-reflect.md  deep-roses-taste.md  dirty-needles-warn.md  eight-cameras-sniff.md  famous-walls-visit.md  fast-doodles-jog.md  fix-donate-private-api.md  fix-electron-file-drop.md  fix-integrated-pty-orphans.md  fix-locales-brackets.md  fix-path-merge-order.md  fix-profile-name-display.md  fix-pty-env-resolution.md  (+62 more)
.github/: .markdownlint.jsonc  FUNDING.yml  dependabot.yml
.github/instructions/: .markdownlint.jsonc  agents.instructions.md  commit-message.instructions.md  localization.instructions.md  typescript.instructions.md  workspace.instructions.md
.github/prompts/: .markdownlint.jsonc  bump-version.prompt.md  commit-staged-change.prompt.md  commit-staged.prompt.md
.github/skills/: .markdownlint.jsonc
.github/workflows/: ci.yml  commitlint.yml  latest.yml  markdownlint.yml  push.yml  release-rolling.yml
.husky/: commit-msg  post-checkout  post-commit  pre-commit  pre-push
.opencode/: agents  commands
@types/: i18n.d.ts
assets/: locales.ts
assets/locales/: README.md  en.json
scripts/: build.mjs  esbuild.config.mjs  git-rolling-refspec-config.mjs  git-rolling-tag-create.mjs  git-rolling-tag-push.mjs  obsidian-install.mjs  sync-locale-keys.mjs  util.mjs  utils.mjs  version-commit.mjs  version-post.mjs  version.mjs
sources/: bundle.ts  documentations.ts  get-package-version.py  i18n.ts  icons.css  icons.ts  import.ts  imports.ts  magic.ts  main.ts  modals.ts  patch.ts  patches.ts  pty.ts  resizer.py  settings-data.ts  settings.ts  status-bar.css  status-bar.ts  styles.css  terminal-serialize.ts  terminal.ts  unix_pty.py  util.ts  win32_resizer.py
sources/@deps/: eastasianwidth.js
sources/@types/: _loaders.d.ts  _obsidian-terminal.d.ts  acorn.d.ts  acorn.ts  browser-util-inspect.d.ts  eastasianwidth.d.ts  electron.d.ts  electron.ts  i18n.d.ts  i18next.d.ts  i18next.ts  index.d.ts  index.ts  json-cycle.d.ts  lib.es5.d.ts  obsidian-terminal.d.ts  obsidian-terminal.ts  obsidian.d.ts  win32-api.d.ts  win32-def.d.ts
sources/components/: find.svelte  find.ts
sources/documentation/: documentations.ts  load.ts  view.ts
sources/settings/: data.ts  load.ts  modals.ts  profile-presets.ts  profile-properties.ts  profiles.ts  tab.ts  ui.ts  (+1 more)
src/: documentations.ts  get_package_version.py  icons.ts  import.ts  magic.ts  main.ts  modals.ts  patch.ts  python-requirements.json  settings-data.ts  settings.ts  styles.css  util.ts  utils.ts
tests/: README.md  __init__.py  conftest.py  helpers.spec.ts  helpers.ts  setup.ts  test_anyio_backend.py  test_docstrings.py  test_git_executable.py  test_module_exports.py  tsconfig.test.json  vi-practices.spec.ts
(+135 files in other folders)
