[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "obsidian-terminal-f9b1c3e0-fcc2-4914-9732-1867d920929b"
version = "0.0.0"
requires-python = ">=3.11.0"
description = "Obsidian Terminal"
license = {file = "LICENSE.txt"}
readme = "README.md"
# Update `README.md`, `dependabot.yml`, `magic.ts`, and `pyproject.toml` together.
dependencies = [
  "psutil==5.9.5",
  "pywinctl==0.0.50",
  "typing_extensions>=4.7.1",
]

[project.scripts]

[project.urls]
repository = "https://github.com/polyipseity/obsidian-terminal.git"

[dependency-groups]
dev = [
  "anyio>=3.6.0",
  "hypothesis>=6.151.0",
  "pandas-stubs>=3.0.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
]

[tool.pyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".venv",
]
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
pythonPlatform = "All"
pythonVersion = "3.11"
deprecateTypingAliases = true
enableReachabilityAnalysis = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

[[tool.pyright.executionEnvironments]]
extraPaths = ["src"]
reportPrivateUsage = "none"
root = "tests"

[[tool.pyright.executionEnvironments]]
root = "src"

[tool.pytest.ini_options]
addopts = ["--cov=./", "--cov-report=term-missing", "--dist=loadscope", "-n=auto", "--strict-markers"]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

[tool.uv]
required-version = ">=0.10.0,<0.11.0"

[tool.uv.build-backend]
# Do not include any packages in the build, as this project is only a collection of tools and scripts.
module-name = []
source-include = ["py.typed"]
