[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "obsidian-terminal-f9b1c3e0-fcc2-4914-9732-1867d920929b"
version = "0.0.0"
# Minimum Python version: 3.9 or above. Keep in sync with README, magic.ts.
requires-python = ">=3.9.0"
description = "Obsidian Terminal"
license = {file = "LICENSE.txt"}
readme = "README.md"
# Update `README.md`, `dependabot.yml`, `magic.ts`, and `pyproject.toml` together.
dependencies = [
  "anyio>=3.6.0",
  "asyncer>=0.0.14",
  "psutil==5.9.5",  # sync
  "pywinctl==0.0.50",  # sync
  "typing_extensions>=4.7.1",  # sync
  "uvloop>=0.22.0; platform_system != 'Windows'",
  "winloop>=0.5.0; platform_system == 'Windows'",
]

[project.scripts]

[project.urls]
repository = "https://github.com/polyipseity/obsidian-terminal.git"

[dependency-groups]
dev = [
  "hypothesis>=6.141.0",
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
]

[tool.pyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".venv",
]
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
pythonPlatform = "All"
# Use 3.9 for development (macOS ships 3.9 by default); runtime allows 3.9 or above.
pythonVersion = "3.9"
deprecateTypingAliases = true
enableReachabilityAnalysis = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

[[tool.pyright.executionEnvironments]]
extraPaths = ["src", "."]
reportPrivateUsage = "none"
root = "tests"

[[tool.pyright.executionEnvironments]]
root = "src"

[[tool.pyright.executionEnvironments]]
root = "."

[tool.pytest.ini_options]
addopts = ["--cov=./", "--cov-report=term-missing", "--dist=loadscope", "-n=auto", "--strict-markers"]
testpaths = [
  ".agents/skills/**/tests_*",
  "tests",
]
python_files = "test_*.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

[tool.uv]
required-version = ">=0.9.0,<0.11.0"

[tool.uv.build-backend]
# Do not include any packages in the build, as this project is only a collection of tools and scripts.
module-name = []
source-include = ["py.typed"]
